force-app/main/default/objects/JobPipelineRun__c/JobPipelineRun__c.object-meta.xml
<CustomObject>
    <description>Runtime instance of a pipeline execution. One record is created each time a pipeline is triggered.</description>
    <label>Job Pipeline Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Pipeline Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>