force-app/main/default/objects/JobPipelineRun__c/fields/ContextData__c.field-meta.xml
<CustomField>
    <fullName>ContextData__c</fullName>
    <description>JSON map of shared key-value data passed between steps via JobExecutionContext.sharedContext. Steps can read and write to this map to pass state across async boundaries.</description>
    <label>Context Data (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>