force-app/main/default/objects/JobPipelineRun__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Timestamp when the pipeline reached a terminal state (Completed, Failed, or Cancelled).</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>