force-app/main/default/objects/JobPipelineRun__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>DeveloperName of the JobPipeline__mdt record that triggered this run.</description>
    <label>Pipeline</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>