force-app/main/default/objects/JobPipelineRun__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Timestamp when the orchestrator moved the run from Queued to Running.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>