force-app/main/default/objects/JobPipelineRun__c/fields/TriggeredBy__c.field-meta.xml
<CustomField>
    <fullName>TriggeredBy__c</fullName>
    <description>Origin of this run: &quot;Scheduler&quot;, &quot;Manual&quot;, or the User ID of the person who triggered it.</description>
    <label>Triggered By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>