force-app/main/default/objects/JobPipelineRun__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pipeline__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>TriggeredBy__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>